Added a lib and optimized the code